force-app/main/default/objects/Media_License__c/Media_License__c.object-meta.xml
<CustomObject>
    <description>Tracks media licensing deals with usage rights, content types, territory, and women's sports content tracking</description>
    <label>Media License</label>
    <nameField>
        <displayFormat>MEDIA-{0000}</displayFormat>
        <label>Media License Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>