force-app/main/default/objects/Media_License__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <type>Lookup</type>
    <referenceTo>Competition__c</referenceTo>
    <relationshipLabel>Media Licenses</relationshipLabel>
    <relationshipName>Media_Licenses</relationshipName>
    <description>Competition/league included in this license</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>