force-app/main/default/objects/Media_License__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highlights</fullName>
            </value>
            <value>
                <fullName>Full Match</fullName>
            </value>
            <value>
                <fullName>Live Streaming</fullName>
            </value>
            <value>
                <fullName>Archived Content</fullName>
            </value>
            <value>
                <fullName>Photos</fullName>
            </value>
            <value>
                <fullName>Statistics</fullName>
            </value>
            <value>
                <fullName>Commentary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Types of content included in this license</description>
</CustomField>