force-app/main/default/objects/Media_License__c/fields/Gender_Focus__c.field-meta.xml
<CustomField>
    <fullName>Gender_Focus__c</fullName>
    <label>Gender Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Men&apos;s Sports</fullName>
            </value>
            <value>
                <fullName>Women&apos;s Sports</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Gender focus - tracks women's sports content licensing</description>
</CustomField>