force-app/main/default/objects/Media_License__c/fields/License_Fee__c.field-meta.xml
<CustomField>
    <fullName>License_Fee__c</fullName>
    <label>License Fee</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Media licensing fee amount</description>
</CustomField>