force-app/main/default/objects/Media_License__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content Only</fullName>
            </value>
            <value>
                <fullName>Data Only</fullName>
            </value>
            <value>
                <fullName>Content and Data</fullName>
                <default>true</default>
                <label>Content and Data</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of media license (Content, Data, or Both)</description>
</CustomField>