force-app/main/default/objects/Media_License__c/fields/Licensee__c.field-meta.xml
<CustomField>
    <fullName>Licensee__c</fullName>
    <label>Licensee</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Media Licenses</relationshipLabel>
    <relationshipName>Media_Licenses</relationshipName>
    <description>Media company receiving the license</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>