force-app/main/default/objects/Media_License__c/fields/Revenue_Stream__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Stream__c</fullName>
    <label>Revenue Stream</label>
    <type>Lookup</type>
    <referenceTo>Revenue_Stream__c</referenceTo>
    <relationshipLabel>Media Licenses</relationshipLabel>
    <relationshipName>Media_Licenses</relationshipName>
    <description>Related revenue stream</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>