force-app/main/default/objects/Media_License__c/fields/Sport_Type__c.field-meta.xml
<CustomField>
    <fullName>Sport_Type__c</fullName>
    <label>Sport Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Rugby</fullName>
            </value>
            <value>
                <fullName>AFL</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Multi-Sport</fullName>
                <default>true</default>
                <label>Multi-Sport</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Primary sport for this media license</description>
</CustomField>