force-app/main/default/objects/Media_License__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
                <default>true</default>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Geographic territory for this license</description>
</CustomField>