force-app/main/default/objects/Media_License__c/fields/Usage_Rights__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rights__c</fullName>
    <label>Usage Rights</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Legal terms and usage rights details</description>
</CustomField>